# kingpin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pom.xml  pom.xml.versionsBackup
angular/: README.md  angular.json  package-lock.json  package.json
angular/src/: index.html  proxy.conf.json  styles.scss
angular/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
angular/src/app/models/: game.ts  gamepad-models.ts  index.ts  ptz-action.ts
angular/src/app/pages/ptz-controls/: ptz-controls.component.html  ptz-controls.component.scss  ptz-controls.component.spec.ts  ptz-controls.component.ts
angular/src/app/services/: ptz.service.spec.ts  ptz.service.ts
kingpin-app/: index.html  package-lock.json  package.json  pom.xml  pom.xml.versionsBackup  tsconfig.app.json  tsconfig.node.json  vite.config.ts
kingpin-app/src/: Layout.tsx  main.tsx
kingpin-app/src/legacy/: WS.js
kingpin-app/src/models/: gamepad-models.ts  index.ts  ptz-action.test.ts  ptz-action.ts
kingpin-app/src/pages/: CreateNewAccount.tsx  Game.tsx  Home.tsx  Login.tsx  StreamControls.tsx  index.ts
kingpin-app/src/store/: gameSlice.ts  hooks.ts  ndiService.ts  store.ts  userSlice.ts
kingpin-app/src/tooling/: gamepad.ts  index.ts  socket-holder.ts  socket.ts
ndi-bindings/: Cargo.toml  build.rs
ndi-bindings/src/: lib.rs
scoreboard/: pom.xml  pom.xml.versionsBackup
scoreboard/config/autosave/: scoreboard-0-secs-ago.json
scoreboard/html/components/lt-sheet/: index.html
scoreboard/html/components/penalty-list/: index.html
scoreboard/html/components/plt-input/: index.html  index.js
scoreboard/html/components/sbo-input/: index.html  index.js
scoreboard/html/components/settings-tab/: index.html
scoreboard/html/components/sk-input/: index.html
scoreboard/html/components/sk-sheet/: index.html
scoreboard/html/components/team-editor/: index.html  index.js
scoreboard/html/custom/view/: example.html
scoreboard/html/documentation/: wiki-snapshot.html
scoreboard/html/javascript/: conversions.js  utils.js
scoreboard/html/nso/jt/: index.html
scoreboard/html/nso/pbt/: index.html
scoreboard/html/nso/plt/: index.js
scoreboard/html/settings/sb_data/: index.html
scoreboard/html/styles/: common.css
scoreboard/html/views/overlay/: index.css  index.html
scoreboard/html/views/overlay/admin/: index.html
scoreboard/html/views/standard/: index.css  index.html
scoreboard/src/main/kotlin/com/nashvillerollerderby/scoreboard/: ApplicationConfig.kt  ScoreboardApplication.kt
scoreboard/src/main/kotlin/com/nashvillerollerderby/scoreboard/core/: ScoreBoardImpl.java
scoreboard/src/main/kotlin/com/nashvillerollerderby/scoreboard/event/: AsyncScoreBoardListener.java  Child.java  Command.java  ConditionalScoreBoardListener.java  CopyChildScoreBoardListener.java  CopyScoreBoardListener.java  CopyValueScoreBoardListener.java  FormatSpecifierScoreBoardListener.java  IndirectScoreBoardListener.java  InverseReferenceUpdateListener.java  MirrorFactory.java  MirrorScoreBoardEventProvider.java  MirrorScoreBoardEventProviderImpl.java  NumberedChild.java  NumberedScoreBoardEventProvider.java  NumberedScoreBoardEventProviderImpl.java  OrderedScoreBoardEventProvider.java  Property.java  (+14 more)
scoreboard/src/main/resources/: log4j2.yaml
server/: Cargo.toml  build.rs
server/src/: application.rs  error.rs  game.rs  gui.rs  main.rs  ndi.rs  ndi_router.rs  scoreboard.rs  stream.rs  window.rs
(+87 files in other folders)
