[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
crossbeam-channel = "0.5.14"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4.0"
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["console_appender", "rolling_file_appender"] }
ndi_bindings = { path = "../ndi-bindings" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_xml = "0.9.1"
serde_yaml = "0.9.33"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
