[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"
build = "build.rs"

[features]
server = []
with_gui = []
game_parser = []

[[bin]]
name = "server"
path = "src/main.rs"
required_features = ["server"]

[[bin]]
name = "gui"
path = "src/gui.rs"
required_features = ["with_gui"]

[[bin]]
name = "game-parser"
path = "src/game.rs"
required_features = ["game_parser"]

[dependencies]
axum = { version = "0.8.3", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bus = "2.4.1"
crossbeam-channel = "0.5.14"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
grafton-ndi = { version = "0.11.0", features = ["tokio", "image-encoding", "async-std"] }
headers = "0.4.0"
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["console_appender", "rolling_file_appender"] }
regex = "1.12.3"
reqwest = "0.12.15"
sdl2 = { version = "0.38.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_xml = "0.9.1"
serde_yaml = "0.9.33"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tungstenite = "0.26.2"
uuid = { version = "1.16.0", features = ["serde"] }
